--- a/cmd/server/static/index.html
+++ b/cmd/server/static/index.html
@@ -1,44 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acai Chat POC</title>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; background-color: #f5f5f5; }
-        #chat-container { background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); overflow: hidden; display: flex; flex-direction: column; height: 80vh; }
-        #messages { flex-grow: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
-        .message { padding: 10px 15px; border-radius: 15px; max-width: 80%; line-height: 1.4; }
-        .user { align-self: flex-end; background-color: #007bff; color: white; border-bottom-right-radius: 2px; }
-        .assistant { align-self: flex-start; background-color: #e9ecef; color: #333; border-bottom-left-radius: 2px; }
-        .system { align-self: center; font-size: 0.8em; color: #888; margin: 10px 0; }
-        #input-area { padding: 20px; border-top: 1px solid #eee; display: flex; gap: 10px; background: white; }
-        input { flex-grow: 1; padding: 12px; border: 1px solid #ddd; border-radius: 25px; outline: none; font-size: 16px; }
-        input:focus { border-color: #007bff; }
-        button { padding: 10px 25px; background-color: #007bff; color: white; border: none; border-radius: 25px; cursor: pointer; font-weight: bold; transition: background 0.2s; }
-        button:hover { background-color: #0056b3; }
-        button:disabled { background-color: #ccc; cursor: not-allowed; }
-        #status { text-align: center; font-size: 0.8em; color: #666; margin-top: 10px; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            height: 100vh;
+            display: flex;
+        }
+
+        #app-container {
+            display: flex;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Sidebar */
+        #sidebar {
+            width: 280px;
+            background: white;
+            border-right: 1px solid #ddd;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+        }
+
+        #sidebar-header {
+            padding: 20px;
+            border-bottom: 1px solid #eee;
+        }
+
+        #sidebar-header h2 {
+            margin: 0 0 10px 0;
+            font-size: 18px;
+        }
+
+        #new-chat-btn {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        #new-chat-btn:hover {
+            background-color: #0056b3;
+        }
+
+        #conversations-list {
+            flex-grow: 1;
+            overflow-y: auto;
+        }
+
+        .conversation-item {
+            padding: 15px 20px;
+            border-bottom: 1px solid #f0f0f0;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        .conversation-item:hover {
+            background-color: #f8f9fa;
+        }
+
+        .conversation-item.active {
+            background-color: #e7f3ff;
+            border-left: 3px solid #007bff;
+        }
+
+        .conversation-title {
+            font-weight: 500;
+            margin-bottom: 5px;
+        }
+
+        .conversation-id {
+            font-size: 0.75em;
+            color: #888;
+            font-family: monospace;
+        }
+
+        /* Main chat area */
+        #main-area {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #chat-container {
+            background: white;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+
+        #messages {
+            flex-grow: 1;
+            overflow-y: auto;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .message {
+            padding: 10px 15px;
+            border-radius: 15px;
+            max-width: 80%;
+            line-height: 1.4;
+        }
+
+        .user {
+            align-self: flex-end;
+            background-color: #007bff;
+            color: white;
+            border-bottom-right-radius: 2px;
+        }
+
+        .assistant {
+            align-self: flex-start;
+            background-color: #e9ecef;
+            color: #333;
+            border-bottom-left-radius: 2px;
+        }
+
+        .system {
+            align-self: center;
+            font-size: 0.8em;
+            color: #888;
+            margin: 10px 0;
+        }
+
+        #input-area {
+            padding: 20px;
+            border-top: 1px solid #eee;
+            display: flex;
+            gap: 10px;
+            background: white;
+        }
+
+        input {
+            flex-grow: 1;
+            padding: 12px;
+            border: 1px solid #ddd;
+            border-radius: 25px;
+            outline: none;
+            font-size: 16px;
+        }
+
+        input:focus {
+            border-color: #007bff;
+        }
+
+        button {
+            padding: 10px 25px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background 0.2s;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
     </style>
 </head>
+
 <body>
-    <div id="chat-container">
-        <div id="messages">
-            <div class="message assistant">Hi! I'm your AI assistant. I can help you with weather, dates, holidays, and airport info. How can I help you today?</div>
+    <div id="app-container">
+        <!-- Sidebar -->
+        <div id="sidebar">
+            <div id="sidebar-header">
+                <h2>Conversations</h2>
+                <button id="new-chat-btn">+ New Chat</button>
+            </div>
+            <div id="conversations-list"></div>
         </div>
-        <div id="input-area">
-            <input type="text" id="message-input" placeholder="Type your message..." autocomplete="off">
-            <button id="send-btn">Send</button>
+
+        <!-- Main chat area -->
+        <div id="main-area">
+            <div id="chat-container">
+                <div id="messages">
+                    <div class="message assistant">Hi! I'm your AI assistant. I can help you with weather, dates,
+                        holidays, and airport info. How can I help you today?</div>
+                </div>
+                <div id="input-area">
+                    <input type="text" id="message-input" placeholder="Type your message..." autocomplete="off">
+                    <button id="send-btn">Send</button>
+                </div>
+            </div>
         </div>
     </div>
-    <div id="status"></div>
 
     <script>
         let conversationId = null;
         const messagesDiv = document.getElementById('messages');
         const input = document.getElementById('message-input');
         const sendBtn = document.getElementById('send-btn');
-        const statusDiv = document.getElementById('status');
+        const conversationsList = document.getElementById('conversations-list');
+        const newChatBtn = document.getElementById('new-chat-btn');
 
         function addMessage(content, role) {
             const div = document.createElement('div');
@@ -46,6 +222,103 @@
             div.textContent = content;
             messagesDiv.appendChild(div);
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
+        }
+
+        function clearMessages() {
+            messagesDiv.innerHTML = '';
+        }
+
+        async function loadConversations() {
+            try {
+                const response = await fetch('/twirp/acai.chat.ChatService/ListConversations', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({})
+                });
+
+                if (!response.ok) return;
+
+                const data = await response.json();
+                conversationsList.innerHTML = '';
+
+                if (!data.conversations || data.conversations.length === 0) {
+                    conversationsList.innerHTML = '<div style="padding: 20px; text-align: center; color: #888;">No conversations yet</div>';
+                    return;
+                }
+
+                data.conversations.forEach(conv => {
+                    const item = document.createElement('div');
+                    item.className = 'conversation-item';
+                    if (conv.id === conversationId) {
+                        item.classList.add('active');
+                    }
+                    item.innerHTML = `
+                        <div class="conversation-title">${conv.title || 'Untitled'}</div>
+                        <div class="conversation-id">${conv.id.substring(0, 8)}...</div>
+                    `;
+                    item.onclick = () => loadConversation(conv.id);
+                    conversationsList.appendChild(item);
+                });
+            } catch (error) {
+                console.error('Error loading conversations:', error);
+            }
+        }
+
+        async function loadConversation(id) {
+            try {
+                clearMessages();
+                const loadingMsg = document.createElement('div');
+                loadingMsg.className = 'message assistant';
+                loadingMsg.textContent = 'Loading conversation...';
+                loadingMsg.id = 'loading-indicator';
+                messagesDiv.appendChild(loadingMsg);
+
+                const response = await fetch('/twirp/acai.chat.ChatService/DescribeConversation', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ conversation_id: id })
+                });
+
+                if (!response.ok) {
+                    throw new Error(`Error: ${response.statusText}`);
+                }
+
+                const data = await response.json();
+                const conv = data.conversation;
+
+                conversationId = id;
+                const loading = document.getElementById('loading-indicator');
+                if (loading) loading.remove();
+
+                if (conv.messages && conv.messages.length > 0) {
+                    conv.messages.forEach(msg => {
+                        addMessage(msg.content, msg.role.toLowerCase());
+                    });
+                }
+
+                document.querySelectorAll('.conversation-item').forEach(item => {
+                    item.classList.remove('active');
+                });
+                document.querySelectorAll('.conversation-item').forEach(item => {
+                    if (item.textContent.includes(id.substring(0, 8))) {
+                        item.classList.add('active');
+                    }
+                });
+            } catch (error) {
+                console.error('Error loading conversation:', error);
+                const loading = document.getElementById('loading-indicator');
+                if (loading) loading.remove();
+                addMessage('Error loading conversation', 'system');
+            }
+        }
+
+        function startNewChat() {
+            conversationId = null;
+            clearMessages();
+            addMessage("Hi! I'm your AI assistant. I can help you with weather, dates, holidays, and airport info. How can I help you today?", 'assistant');
+            document.querySelectorAll('.conversation-item').forEach(item => {
+                item.classList.remove('active');
+            });
         }
 
         async function sendMessage() {
@@ -56,11 +329,17 @@
             input.disabled = true;
             sendBtn.disabled = true;
             addMessage(text, 'user');
-            statusDiv.textContent = 'Thinking...';
+
+            const thinkingMsg = document.createElement('div');
+            thinkingMsg.className = 'message assistant';
+            thinkingMsg.textContent = 'Thinking...';
+            thinkingMsg.id = 'thinking-indicator';
+            messagesDiv.appendChild(thinkingMsg);
+            messagesDiv.scrollTop = messagesDiv.scrollHeight;
 
             try {
                 let url, body;
-                
+
                 if (!conversationId) {
                     url = '/twirp/acai.chat.ChatService/StartConversation';
                     body = { message: text };
@@ -80,20 +359,25 @@
                 }
 
                 const data = await response.json();
-                
+
                 if (data.conversation_id) {
                     conversationId = data.conversation_id;
                 }
 
+                const thinking = document.getElementById('thinking-indicator');
+                if (thinking) thinking.remove();
+
                 addMessage(data.reply, 'assistant');
+                await loadConversations();
             } catch (error) {
                 console.error('Error:', error);
+                const thinking = document.getElementById('thinking-indicator');
+                if (thinking) thinking.remove();
                 addMessage('Sorry, something went wrong. Please try again.', 'system');
             } finally {
                 input.disabled = false;
                 sendBtn.disabled = false;
                 input.focus();
-                statusDiv.textContent = '';
             }
         }
 
@@ -101,6 +385,10 @@
         input.addEventListener('keypress', (e) => {
             if (e.key === 'Enter') sendMessage();
         });
+        newChatBtn.addEventListener('click', startNewChat);
+
+        loadConversations();
     </script>
 </body>
+
 </html>
